
[TestSplitMigration/up_and_down_with_dollar-quoted_function - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE FUNCTION test() RETURNS int AS $$\nBEGIN\n    RETURN 1;\nEND;\n$$ LANGUAGE plpgsql;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:86, Line:5, Col:21},
    },
}
[]sqlsplit.Stmt{
    {
        Content: "DROP FUNCTION test();",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:123, Line:7, Col:1},
        End:     sqlsplit.Location{Pos:144, Line:7, Col:22},
    },
}
---

[TestSplitMigration/up_only_single_statement - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:28, Line:1, Col:29},
    },
}
[]sqlsplit.Stmt(nil)
---

[TestSplitMigration/empty_up_section - 1]
[]sqlsplit.Stmt{
}
[]sqlsplit.Stmt{
    {
        Content: "DROP TABLE users;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:36, Line:2, Col:1},
        End:     sqlsplit.Location{Pos:53, Line:2, Col:18},
    },
}
---

[TestSplitMigration/empty_down_section - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:28, Line:1, Col:29},
    },
}
[]sqlsplit.Stmt{
}
---

[TestSplitMigration/up_and_down_with_comments - 1]
[]sqlsplit.Stmt{
    {
        Content: "-- Create users table\nCREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:50, Line:2, Col:29},
    },
}
[]sqlsplit.Stmt{
    {
        Content: "-- Drop users table\nDROP TABLE users;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:87, Line:4, Col:1},
        End:     sqlsplit.Location{Pos:124, Line:5, Col:18},
    },
}
---

[TestSplitMigration/up_and_down_single_statements - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:28, Line:1, Col:29},
    },
}
[]sqlsplit.Stmt{
    {
        Content: "DROP TABLE users;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:65, Line:3, Col:1},
        End:     sqlsplit.Location{Pos:82, Line:3, Col:18},
    },
}
---

[TestSplitMigration/up_only_multiple_statements - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:28, Line:1, Col:29},
    },
    {
        Content: "CREATE TABLE posts (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:29, Line:2, Col:1},
        End:     sqlsplit.Location{Pos:57, Line:2, Col:29},
    },
}
[]sqlsplit.Stmt(nil)
---

[TestSplitMigration/up_and_down_multiple_statements - 1]
[]sqlsplit.Stmt{
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:28, Line:1, Col:29},
    },
    {
        Content: "CREATE TABLE posts (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:29, Line:2, Col:1},
        End:     sqlsplit.Location{Pos:57, Line:2, Col:29},
    },
}
[]sqlsplit.Stmt{
    {
        Content: "DROP TABLE posts;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:94, Line:4, Col:1},
        End:     sqlsplit.Location{Pos:111, Line:4, Col:18},
    },
    {
        Content: "DROP TABLE users;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:112, Line:5, Col:1},
        End:     sqlsplit.Location{Pos:129, Line:5, Col:18},
    },
}
---

[TestSplitMigration/separator_in_string_is_not_split - 1]
[]sqlsplit.Stmt{
    {
        Content: "SELECT '---- create above / drop below ----';",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:45, Line:1, Col:46},
    },
}
[]sqlsplit.Stmt(nil)
---

[TestSplitMigration/disable-tx_directive - 1]
[]sqlsplit.Stmt{
    {
        Content: "---- disable-tx ----",
        Type:    "disable-tx",
        Start:   sqlsplit.Location{Pos:0, Line:1, Col:1},
        End:     sqlsplit.Location{Pos:20, Line:1, Col:21},
    },
    {
        Content: "CREATE TABLE users (id int);",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:21, Line:2, Col:1},
        End:     sqlsplit.Location{Pos:49, Line:2, Col:29},
    },
}
[]sqlsplit.Stmt{
    {
        Content: "DROP TABLE users;",
        Type:    "query",
        Start:   sqlsplit.Location{Pos:86, Line:4, Col:1},
        End:     sqlsplit.Location{Pos:103, Line:4, Col:18},
    },
}
---
